# Prism

./: .gitignore  AGENTS.md  AGENTS_SUMMARY.md  DEVREL_AGENT_IMPLEMENTATION.md  Makefile  README.md  package-lock.json  tsconfig.json
phase2/prism-devrel/: .env.example  README.md  pyproject.toml
phase2/prism-devrel/docs/: agents.md  api.md  integration.md  web.md
phase2/prism-devrel/raw_data/: repo_user.csv  repo_user_activity.csv
phase2/prism-devrel/results/: WORK_SUMMARY.md  agent_full_results.json  agent_test_results.json  agent_test_results.md
phase2/prism-devrel/scripts/: run_fixtures.py
phase2/prism-devrel/tests/: conftest.py  test_agents.py  test_agents_fixtures.py  test_agents_llm_live.py  test_agents_with_raw_data.py  test_llm_judge.py  test_raw_data_loader.py
phase2/prism-devrel/web/: package-lock.json  package.json
phase3/: .env.example  README.md  context-bundle.schema.json  package.json  pyproject.toml  redaction-policy.default.json  redaction-policy.schema.json  retrospective-court-spec.md  sensitive-info-spec.md
phase3/public/: app.js  styles.css
phase3/specs/: 00-index.md  01-github-context-builder.md  02-redaction-pipeline.md  03-postgres-storage.md  04-court-orchestrator.md  05-embeddings-and-search.md  06-prompt-registry-hitl.md  07-gui-review-timeline.md  08-secrets-and-config.md
phase3/src/: app.ts  env.ts  index.ts  seed.ts
phase3/test/: 1_issue_analysis.md  2_assignment.md  3_promotion.md
phase3/tests/: api.test.ts  redaction.test.ts  test_court_orchestrator.py  test_github_context_builder.py  test_redaction_guard.py  test_redaction_pipeline.py  test_storage_integration_optional.py
src/: env.ts
(+674 files in other folders)
