[project]
name = "prism-devrel-phase2"
version = "0.0.0"
description = "Phase 2 (Agents) scaffold for PRISM DevRel Agent"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "openai>=1.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["llm_judge: requires OPENAI_API_KEY and RUN_LLM_JUDGE=1"]
