[project]
name = "prism-devrel-phase2"
version = "0.0.0"
description = "Phase 2 (Agents) scaffold for PRISM DevRel Agent"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "openai>=1.0.0", "psycopg[binary]>=3.1.0"]
api = ["fastapi>=0.109.0", "uvicorn[standard]>=0.27.0", "openai>=1.0.0", "psycopg[binary]>=3.1.0", "pydantic>=2.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "llm_judge: calls OpenAI (requires OPENAI_API_KEY)",
  "llm_live: calls OpenAI for agent outputs (requires OPENAI_API_KEY)",
]
